# recipe-chatbot

./: .gitignore  Makefile  pyproject.toml
backend/: utils.py
data/: sample_queries.csv
homeworks/hw2/: h2_denis.ipynb  synthetic_queries.csv  synthetic_queries.txt
