[project]
name = "recipe-chatbot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix-otel>=0.12.1",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "judgy>=0.1.0",
    "litellm>=1.72.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "openinference-instrumentation-litellm>=0.1.22",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "rank-bm25>=0.2.2",
    "rich>=14.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "uvicorn>=0.34.3",
]
